
* All test servers have been moved out of the bzrlib.transport hierarchy to
  bzrlib.tests.test_server *except* for MemoryServer, ChrootServer and
  PathFilteringServer. ``bzrlib`` users may encounter test failures that can
  be fixed by updating the related imports from ``bzrlib.transport.xxx`` to
  ``bzrlib.tests.test_server``.
  (Vincent Ladeuil)

New Features
************

* If the Apport crash-reporting tool is available, bzr crashes are now
  stored into the ``/var/crash`` apport spool directory, and the user is
  invited to report them to the developers from there, either
  automatically or by running ``apport-bug``.  No information is sent
  without specific permission from the user.  (Martin Pool, #515052)

* Parsing of command lines, for example in ``diff --using``, no longer
  treats backslash as an escape character on Windows.   (Gordon Tyler,
  #392248)

* Tree-shape conflicts can be resolved by providing ``--take-this`` and
  ``--take-other`` to the ``bzr resolve`` command. Just marking the conflict
  as resolved is still accessible via the ``--done`` default action.
  (Vincent Ladeuil)

* Merges can be proposed on Launchpad with the new lp-propose-merge command.
  (Aaron Bentley, Jonathan Lange)

Bug Fixes
*********

* Added docstring for ``Tree.iter_changes``
  (John Arbash Meinel, #304182)

* Allow exporting a single file using ``bzr export``.
  (Michal Junák, #511987)

* Avoid infinite recursion when probing for apport.
  (Vincent Ladeuil, #516934)

* Avoid ``malloc(0)`` in ``patiencediff``, which is non-portable.
  (Martin Pool, #331095)

* ``bzr add`` will not add conflict related files unless explicitly required.
  (Vincent Ladeuil, #322767, #414589)

* ``bzr help`` will no longer trigger the get_missing_command hook when
  doing a topic lookup. This avoids prompting (like 'no command plugins/loom,
  did you mean log?') when getting help. In future we may trigger the hook 
  deliberately when no help topics match from any help index.